# counting-rnn

./: .gitattributes  .gitignore  Makefile  environment.yaml  pyproject.toml
configs/: .~lock.logs.xlsx#  config_sweep.py  config_sweep.txt  configure_dataset.py  configure_dataset_copy.py  configure_model.py  configure_reproducibility.py  configure_testing.py  configure_training.py  logs.xlsx
experiments/: new_exp.py
experiments/2025-08-19/0000/: README.md  run.py
experiments/2025-09-05/0000/: README.md  run.py
experiments/2025-09-05/0001/: README.md  run.py
experiments/2025-09-09/0000/: README.md  run.py
experiments/2025-09-09/0001/: run.py
experiments/aaaa/0000/: run.py
notebooks/: aaaa0000 copy.ipynb  aaaa0000.ipynb  aaaa0001.ipynb  beta_00.ipynb  beta_01.ipynb  beta_02.ipynb
scripts/: configure_dataset.py  configure_model.py  configure_testing.py  configure_training.py  sweep.py  sweep_2.py
src/: plot_utils.py
src/analysis/: utils.py
src/core_utils/: config_types.py  io_utils.py  recursion.py  reproducibility.py  tensor.py
src/data/: builder.py  config.py  sequences.py  utils.py
src/engine/: config.py  driver.py  eval.py  loss.py  train.py  training.py  utils.py
src/general_utils/: __init__.py  cli.py  config.py  config_types.py  configops.py  fileio.py  metadata.py  records.py  recursion.py  reproducibility.py  seed.py  serialization.py  sweep.py  tensor.py  validation.py
src/models/: builder.py  config.py  networks.py
src/networks/: models.py  utils.py
src/plotting/: core.py  utils.py
src/utils/: reproducibility.py  tensor.py
(+761 files in other folders)
