[build-system]
requires = ["setuptools>=64", "wheel"] 
build-backend = "setuptools.build_meta"

[project]
name = "counting-rnn"
version = "0.1.0"
description = "Discrete time RNNs that count tokens"
authors = [
    { name = "Jonathan Chien", email = "jonathanmchien@gmail.com"}
]
license = { text = "MIT" }
dependencies = ["torch>=2.6.0"]

requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
